example nullable property value
